Infinte levels left and right w/ transitions
Levels can now go infinitely left or right, with transition blocks
determining the next type to go.

To do:
- too much dependencies within classes got to organize the classes
better
- put in obstacles
- put in win condition, I'm thinking point given to each obstacle
cleared.

--- a/50GamesIn1/Assembly-CSharp-vs.csproj
+++ b/50GamesIn1/Assembly-CSharp-vs.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BlockProperties.cs" />
+     <Compile Include="Assets\CollisionWith.cs" />
      <Compile Include="Assets\Scripts\InfiniteLevel.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerPhysics.cs" />
