--- a/50GamesIn1/Assembly-CSharp-vs.csproj
+++ b/50GamesIn1/Assembly-CSharp-vs.csproj
@@ -47,10 +47,14 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\BlockProperties.cs" />
+     <Compile Include="Assets\BoostOver.cs" />
+     <Compile Include="Assets\CameraMovement.cs" />
      <Compile Include="Assets\CollisionWith.cs" />
      <Compile Include="Assets\Scripts\InfiniteLevel.cs" />
+     <Compile Include="Assets\Scripts\MoveEnemy.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerPhysics.cs" />
+     <Compile Include="Assets\SpawnObstacles.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
  </Reference>
