Added New Obstacles and background
two new box obstacles, I changed it so now if the player goes over the
boxes they boost for a set number of frames, less than the spikes.
Added Background and added the beginnings of camera panning.
For now I have random obstacles on.

To do:
- have specific patterns for obstacles and increasing difficulty.
- pan the camera when you get closer to the enemy.
- two new obstacles that the enemy will throw.
- art.

--- a/50GamesIn1/Assembly-CSharp-vs.csproj
+++ b/50GamesIn1/Assembly-CSharp-vs.csproj
@@ -46,15 +46,16 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\BlockProperties.cs" />
-     <Compile Include="Assets\BoostOver.cs" />
-     <Compile Include="Assets\CameraMovement.cs" />
-     <Compile Include="Assets\CollisionWith.cs" />
+     <Compile Include="Assets\Scripts\BlockProperties.cs" />
+     <Compile Include="Assets\Scripts\BoostOver.cs" />
+     <Compile Include="Assets\Scripts\CameraMovement.cs" />
+     <Compile Include="Assets\Scripts\CollisionWith.cs" />
      <Compile Include="Assets\Scripts\InfiniteLevel.cs" />
      <Compile Include="Assets\Scripts\MoveEnemy.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerPhysics.cs" />
-     <Compile Include="Assets\SpawnObstacles.cs" />
+     <Compile Include="Assets\Scripts\SpawnObstacles.cs" />
+     <Compile Include="Assets\Scripts\TheBackGround.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
  </Reference>
